--- a/style.css
+++ b/style.css
@@ -6,9 +6,15 @@
 
 .trybewarts-login {
   display: flex;
-
 }
 
 .trybewarts-header-logo {
   width: 20%;
+  align-self: center;
+  margin-left: 2%;
+}
+
+#trybewarts-header-title {
+  display: flex;
+  align-self: center;
 }
