--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+  margin: 0;
+}
+
 .header {
   display: flex;
   background-color: rgb(50, 167, 145);
@@ -6,6 +10,13 @@
 
 .trybewarts-login {
   display: flex;
+  align-self: center;
+  margin-right: 10px;
+}
+
+#formBox {
+  display: flex;
+  align-self: center;
 }
 
 .trybewarts-header-logo {
@@ -17,4 +28,13 @@
 #trybewarts-header-title {
   display: flex;
   align-self: center;
+}
+
+main {
+  display: flex;
+}
+
+#evaluation-form {
+  display: flex;
+  width: 675px;
 }
