--- a/style.css
+++ b/style.css
@@ -1,57 +1,17 @@
-body {
-  margin: 0;
+*{
+  margin: 0px;
+  /* padding: 0px; */
 }
-
-.header {
+.header{
   display: flex;
   background-color: rgb(50, 167, 145);
   justify-content: space-between;
-}
+};
 
-.trybewarts-login {
+.trybewarts-login{
   display: flex;
-  align-self: center;
-  margin-right: 10px;
-}
+ 
+};
 
-#formBox {
-  display: flex;
-  align-self: center;
-}
 
-.trybewarts-header-logo {
-  width: 20%;
-  align-self: center;
-  margin-left: 2%;
-}
 
-#trybewarts-header-title {
-  display: flex;
-  align-self: center;
-}
-
-main {
-  display: flex;
-}
-
-#evaluation-form {
-  display: flex;
-  width: 675px;
-  flex-direction: column;
-}
-
-#trybewarts-forms-logo {
-  height: 500px;
-}
-
-#full-name {
-  display: flex;
-}
-
-#info {
-  display: flex;
-}
-
-#rates {
-  display: inline;
-}
